Show repository name and pull-request number

--- a/src/popup.html
+++ b/src/popup.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <div class="main">
-      <div class="message">
+      <div>
         <img src="images/icon19.png" alt="icon" id="icon"/>
-        <span id="title">GitHub Stream</span>
+        <div class="content">
+          <span id="title"></span>
+          <div id="message">GitHub Stream</div>
+        </div>
       </div>
 
       <a href="#" id="next-button" class="button">Next</a>
